PROJECT(resources)

CMAKE_HOST_SYSTEM_INFORMATION(RESULT HOSTINFO QUERY 
	OS_NAME 	#0
)
LIST(GET HOSTINFO 0 HI_OS_NAME)

IF(${HI_OS_NAME} STREQUAL "Windows")
	SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
ENDIF()

ADD_LIBRARY(${PROJECT_NAME} SHARED
    resources.cpp
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ETISS)

INSTALL(FILES
    libresources.h
    DESTINATION include/jit/etiss/jit
)
InstallJitLib(${PROJECT_NAME})
